--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -4,9 +4,18 @@
 
 @tailwind utilities;
 
+html {
+  height: 100%;
+}
 body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   scroll-behavior: smooth;
   transition: background-color 0.6s ease-in-out;
+}
+main {
+  flex: 1 0 auto;
 }
 *,
 :after,
@@ -43,8 +52,65 @@ body {
 .header__nav-item:hover .header__nav-item-title span:before {
   transform: skewY(7deg);
 }
+.header__burger,
+.theader__burger * {
+  outline: none !important;
+}
+.header__burger {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+.header__burger div {
+  width: 25px;
+  height: 20px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+.header__burger span:first-child {
+  top: 6px;
+}
+.header__burger span:last-child {
+  bottom: 6px;
+}
+.header__burger span {
+  background-color: #00122c;
+  height: 2px;
+  width: 25px;
+  border-radius: 0;
+  content: '';
+  position: absolute;
+  left: 0;
+  transition: transform 0.2s ease-in-out;
+}
+.header__nav-mobile.is-open {
+  transform: none;
+}
+.header__nav-mobile {
+  transform: translateY(-100%);
+  transition: transform 0.4s;
+  z-index: 20;
+  height: 100vh;
+}
 .text-56 {
   font-size: 50px;
+}
+.o-container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  max-width: 100%;
+  width: 100%;
+}
+.hero__block {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+.hero__block h1 {
+  line-height: 1.03;
+  letter-spacing: -0.01em;
 }
 .works__grid {
   display: grid;
@@ -198,10 +264,20 @@ body {
   height: 1px;
   transition: width 0.8s cubic-bezier(0.555, 0.205, 0.295, 0.975);
 }
-.project-wrapp {
+.project-wrap {
   overflow-x: unset;
 }
+
+footer {
+  background-color: #111;
+  color: #fff;
+  flex-shrink: 0;
+}
+
 @media (min-width: 48em) {
+  .hero__block {
+    margin-top: 90px;
+  }
   .works__grid .works-item__content {
     padding: 2.5rem;
   }
@@ -210,6 +286,12 @@ body {
   }
 }
 @media (min-width: 64em) {
+  .container,
+  .o-container {
+    padding-left: 7rem;
+    padding-right: 7rem;
+    max-width: 1440px;
+  }
   .works__grid {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
